# music-player

./: CMakeLists.txt  Interface.qml  MediaControlNotification.java  README.md  main.cpp  main.qml  mediacontrolnotification.cpp  mediacontrolnotification.h  model.cpp  model.h  mp3player.pro  playlistmodel.cpp  playlistmodel.h  qml.qrc
android/: AndroidManifest.xml
android/src/com/java/notification/: MediaControlNotification.java  NativeFunctions.java  NotificationReceiver.java
qml/: Interface.qml  MySlider.qml  main.qml  qml.qrc
qml/+android/: main.qml
src/: main.cpp  mediacontrolnotification.cpp  mediacontrolnotification.h  playlistmodel.cpp  playlistmodel.h
